--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,36 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<html>
 
-  <title>{{ site.name }}{% if page.title %} - {{ page.title }}{% endif %}</title>
-  <link rel="shortcut icon" href="{{ site.baseurl }}assets/images/favicon.ico">
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/style.css">
-  <link rel="alternate" type="application/rss+xml" title="My Blog" href="{{ site.baseurl }}rss.xml">
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/highlight.css">
-</head>
-<body>
+  {% include head.html %}
 
-  {% include navigation.html %}
+  <body>
 
-  {% if page.profile %}
-      {% include profile.html %}
-  {% endif %}
+    {% include header.html %}
 
-  <section id="wrapper" class="{% if page.profile %}home{% endif %}">
-    {{ content }}
-  </section>
+    <div class="page-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div>
 
-  <script src="{{ site.baseurl }}assets/js/jquery-2.2.3.min.js"></script>
-  <script src="{{ site.baseurl }}assets/js/main.js"></script>
-  <script src="{{ site.baseurl }}assets/js/highlight.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
+    {% include footer.html %}
 
- <script type="text/javascript" src="http://tajs.qq.com/stats?sId=25632379" charset="UTF-8"></script>
-</body>
+  </body>
+
 </html>
-
-
-
