remove left block

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -490,7 +490,7 @@ header h2 {
 
 #main-content {
   float: left;
-  width: 690px;
+  /*width: 690px;*/
 }
 
 #main-content img {
@@ -505,6 +505,7 @@ aside#sidebar {
   font-size: 12px;
   line-height: 1.3;
   background: transparent url(../images/sidebar-bg.jpg) 0 0 no-repeat;
+  display: none;
 }
 
 aside#sidebar p.repo-owner,
